quorum/test/tests/TypeChecker/Pass/InstanceTypeCurrent.quorum
class Main
    action Main
        A a
        boolean result
        if a is a A then
            result = true
        end
        else then
            result = false
        end
    end
end