quorum/test/tests/TypeChecker/Fail/InstanceTypeUnrelatedTypes.quorum
class Main
    action main
        A a
        boolean result
        if a is a D then
            result = true
        end
        else then
            result = false
        end
    end
end